added login and signup

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <h1> SIGN UP FOR FREE NOW!</h1> 
+<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}">
 </head>
 <body> 
 Name<input type="text" name="name"><br>
