--- a/static/styles.css
+++ b/static/styles.css
@@ -1,1 +1,9 @@
 /* Add your CSS Code here */
+body {
+ background-color:#E680B2;
+ text-align:center;
+ font-family:"Times New Roman";
+ font-size:30px;
+ color: #99FFCC;
+}
+#login{text-align:left;}
