--- a/templates/choose_destination.html
+++ b/templates/choose_destination.html
@@ -12,11 +12,16 @@
 <button type="button" >I want to visit this location</button>
 </div>
 <div class = "destination_window">
-<img class = "destination_image" src = "http://frmarkdwhite.files.wordpress.com/2009/11/tel-aviv-skyline.jpg.jpg" alt = "picture of the city">
+<img class = "destination_image" src = "http://kyweb.fi/wp-content/uploads/2014/06/tel-aviv.jpg" alt = "picture of the city">
 <h4>Tel Aviv</h4>
 <button type="button" >I want to visit this location</button>
 </div>
-
+<div class = "destination_window">
+<img class = "destination_image" src = "http://guide21.net/style/images/art/Nazareth1.jpg" alt = "picture of the city" width="
+875" height="475">>
+<h4>Nazareth</h4>
+<button type="button" >I want to visit this location</button>
+</div>
 
 
 
