--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}">
 <h1>About us</h1>
 <h2>Have you ever wanted to experience a new colture life?</h2>
 <h2>Have you ever thought about traveling in Israel?</h2>
