--- a/templates/choose_destination.html
+++ b/templates/choose_destination.html
@@ -1,9 +1,10 @@
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}">
 <title>choose your destination</title>
 </head>
 <header>
-<h1>choose your destination</h1>
+<h1 id="h">choose your destination</h1>
 <h2>the place of your dream trip</h2>
 </header>
 <div class = "destination_window">
