--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<h1> SIGN UP FOR FREE NOW!</h1> 
+<h1 id="h"> SIGN UP FOR FREE NOW!</h1> 
 <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}">
 </head>
 <body> 
@@ -8,13 +8,13 @@ Name<input type="text" name="name"><br>
 Age<input type="int" name="age"><br>
 Email<input type="text" name="email"><br>
 Password <input type="password" name="password"><br>
-<p> What would you like to experience? </p>
+<p id="p1"> What would you like to experience? </p>
 <form>
 <input type="radio" name="the experience" value="host">host<br>
 <input type="radio" name="the experience" value="travelling">travelling<br>
 </form>
 <from>
-<p> * if you chose 'travelling' what is your goal from the travelling?</p>
+<p id="p1"> * if you chose 'travelling' what is your goal from the travelling?</p>
 <input type="radio" name="the experience" value="learn/study">learn/study<br>
 <input type="radio" name="the experience" value="visit">visit<br> <br>
 </form>
