--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<h1> LOG IN :) </h1> 
+<h1 id="h"> LOG IN :) </h1> 
 <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}">
 </head>
 
