--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -4,14 +4,13 @@
 <h1 id="h"> LOG IN :) </h1> 
 <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}">
 </head>
-
 <body id="login">
 <form>
 Name<input type="text" name="name"><br>
 Email<input type="text" name="email"><br>
 Password <input type="password" name="password"><br>
 <input type="submit" value="Log in">
-
+</form>
 </body>
 
 </html>
