--- a/templates/choose_host.html
+++ b/templates/choose_host.html
@@ -6,7 +6,13 @@
 <header>
 <h1 id="h">choose your Host</h1>
 <h2>the place of your dream trip</h2>
-
+{% for user in Users %}
+{% if user.experience=='host' %}
+{{user.name}}
+{{user.age}}
+{{user.email}}
+{{user.address}}
+{% endfor %}
 </header>
 
 </div>
