--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -2,13 +2,12 @@
 <head>
 <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}">
 <h1 id="h">About us</h1>
-<h2>Have you ever wanted to experience a new colture life?</h2>
-<h2>Have you ever thought about traveling in Israel?</h2>
+<h2>Have you ever wanted to experience a new culture life?</h2>
 </head>
 <body>
-<p>If you can relate to this questions we are the answer fo you!</p>
-<p>we offer you an amazing trip to Israel where you will be able to experience other coultures or study here</p>
-<p>If you live in Israel you can also be the host for the tourists</p>
+<p>our website offers you an amazing oppourtuity where you will be able to experience other cultures and get to know different people.</p>
+<p>the purpose is to combine between palestinians and israelies, which aim to dicrease racism. </p>
+<p>you can either host others, study, or just travel.</p>
 <p>Have the trip of your dreams with us!</p>  
 </body>
 
