--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>
-    
-  </title>
-  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
-  
-  
+  <title>main page</title>
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}"> 
 </head>
 
 <body>
