--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}">
 </head>
 <body> 
-<div id="menu" style="">
+<div id="menu" >
 <h2>menu</h2>
 <a href="{{url_for('main')}}">Home</a><br>
 <a href="{{url_for('about_us')}}">About Us</a><br> 
