--- a/static/styles.css
+++ b/static/styles.css
@@ -9,6 +9,7 @@ background-size:cover;
 }
 #p1{color:#333333;}
 #h1{text-align:center; color:#3366FF;}
+#h{ font-size: 60px;}
 
 #menu {
 font-size: 50px;
@@ -21,7 +22,7 @@ text-align:center;
 }
 
 #uvp{
-font-size: 60px;
+font-size: 40px;
 position:absolute;
 margin-left: 550px;
 width:1800px;
@@ -35,4 +36,5 @@ img { height: 300px;}
 #C{color: #3366FF;}
 #A{color: #85A3FF;}
 #E {color:#5C85FF;}
+
 
