--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -15,7 +15,8 @@
 <a href="{{url_for('about_us')}}">About Us</a><br> 
 <a href="{{url_for('log_in')}}">Log-in</a><br> 
 <a href="{{url_for('sign_up')}}">Sign-Up</a><br> 
-<a href="{{url_for('destination')}}">Choose Destination</a><br> 
+<a href="{{url_for('destination')}}">Choose Destination</a><br>
+<a href="{{url_for('log_in')}}">Sign-Out</a><br> 
 </div>
 <div id="uvp"> 
 <div id="C">COMBINE PEOPLE,</div><div id="E"> EXPERIENCE CULTURE, </div> <div id="A">AND LIVE THE DIFFERENCE</div>
