--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -11,14 +11,15 @@
 <a href="{{url_for('about_us')}}">About Us</a><br> 
 <a href="{{url_for('log_in')}}">Log-in</a><br> 
 <a href="{{url_for('sign_up')}}">Sign-Up</a><br> 
-<a href="{{url_for('destination')}}">Choose Destination</a><br> 
+<a href="{{url_for('destination')}}">Choose Destination</a><br>
+<a href="{{url_for('log_in')}}">Sign-Out</a><br>  
 </div>
 <div id="uvp"> 
 <form>
-Name<input type="text" name="name"><br>
-Email<input type="text" name="email"><br>
-Password <input type="password" name="password"><br>
-<input type="submit" value="Log in">
+Name<input id="loginbox" type="text" name="name"><br><br>
+Email<input id="loginbox" type="text" name="email"><br><br>
+Password <input id="loginbox" type="password" name="password"><br><br>
+<input id="submitloginbox" type="submit" value="Log in">
 </form>
 </div> 
 </body>
