--- a/templates/wrong_user.html
+++ b/templates/wrong_user.html
@@ -5,12 +5,8 @@
 <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles.css')}}">
 </head>
 <body id="login">
-<form>
-Name<input type="text" name="name"><br>
-Email<input type="text" name="email"><br>
-Password <input type="password" name="password"><br>
-<input type="submit" value="Log in">
-</form>
+WRONG USER
+<a href = "{{url_for('main')}}"> main </a>
 </body>
 
 </html>
