--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -14,7 +14,7 @@
 <a href="{{url_for('destination')}}">Choose Destination</a><br> 
 </div>
 <div id="uvp"> 
-<form>
+<form method='POST' action='{{url_for("log_in")}}'>
 Name<input type="text" name="name"><br>
 Email<input type="text" name="email"><br>
 Password <input type="password" name="password"><br>
