--- a/static/styles.css
+++ b/static/styles.css
@@ -50,6 +50,12 @@ img { height: 300px;}
     width: 400px;
     font-size:40px;
 }
+#city
+{ 
+    height:70px;
+    width: 500px;
+    font-size:40px;
+}
 
 
 
