--- a/templates/wrong_user.html
+++ b/templates/wrong_user.html
@@ -6,7 +6,7 @@
 </head>
 <body id="login">
 WRONG USER
-<a href = "{{url_for('main')}}"> main </a>
+<br><a href = "{{url_for('main')}}"> main </a>
 </body>
 
 </html>
