--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -15,7 +15,7 @@
 <a href="{{url_for('log_in')}}">Sign-Out</a><br>  
 </div>
 <div id="uvp"> 
-
+<h2> Log-In </h2> 
 <form method='POST' action='{{url_for("log_in")}}'>
 Name<input id="loginbox" type="text" name="name"><br><br>
 Email<input id="loginbox" type="text" name="email"><br><br>
