--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -13,8 +13,9 @@
 <h2>menu</h2>
 <a href="{{url_for('main')}}">Home</a><br>
 <a href="{{url_for('about_us')}}">About Us</a><br> 
+<a href="{{url_for('sign_up')}}">Sign-Up</a><br>
 <a href="{{url_for('log_in')}}">Log-in</a><br> 
-<a href="{{url_for('sign_up')}}">Sign-Up</a><br> 
+<a href="{{url_for('profile')}}">Edit your profile</a><br>  
 <a href="{{url_for('destination')}}">Choose Destination</a><br>
 <a href="{{url_for('log_in')}}">Sign-Out</a><br> 
 </div>
