--- a/static/styles.css
+++ b/static/styles.css
@@ -39,7 +39,7 @@ img { height: 300px;}
 
 #loginbox
 {
-    height:40px;
+    height:60px;
     width: 400px;
     font-size:40px;
 }
@@ -55,6 +55,15 @@ img { height: 300px;}
     height:70px;
     width: 500px;
     font-size:40px;
+}
+#table
+{ border: 6px solid black;
+  width:400px;
+  font-size:50px;
+}
+th {
+    height: 60px;
+    border: 6px solid black;
 }
 
 
