--- a/templates/choose_host.html
+++ b/templates/choose_host.html
@@ -5,10 +5,9 @@
 </head>
 <header>
 <h1 id="h">choose your Host</h1>
-<h2>the place of your dream trip</h2>
 </header>
 <body>
-<table border=1>
+<table  id="table" border=2>
 <tr><th colspan="4">Hosts in The requested City</th></tr>
 <tr><th>Name</th><th>age</th><th>Email</th><th>Address</th></tr>
 {% for user in hosts %}
@@ -20,7 +19,7 @@
 <td>{{user.address}}</td>
 <td> <form method="POST" action="{{url_for('select_host', city_id = city_id)}}">
 	<input type= 'hidden' name = 'host_id' value ={{user.id}}>
-	<input type = 'submit' value = 'choose {{user.name}}'>
+	<input  id="submitloginbox" type = 'submit' value = 'choose {{user.name}}'>
 </form>
 </tr>
 {% endif %}
